# noteworthy

./: .env.development  .eslintignore  .eslintrc.json  .gitignore  .prettierrc.json  .vercelignore  LICENSE  LICENSE.md  README.md  docker-compose.yml  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: format.yml  lint.yml
prisma/: schema.prisma
prisma/.next/: trace
public/locales/: schema.json  schema.mjs
server/: Cargo.toml  README.md
server/.cargo/: config.toml
server/src/: app_state.rs  errors.rs  main.rs  mod.rs
server/src/controllers/: mod.rs  note_controller.rs  user_controller.rs
server/src/models/: accounts.rs  enums.rs  mod.rs  notes.rs  password_reset_tokens.rs  prelude.rs  sea_orm_active_enums.rs  users.rs  users_preferences.rs
server/src/repositories/: mod.rs  note_repository.rs  user_repository.rs
server/src/routes/: note_routes.rs  user_routes.rs
server/src/utils/: colour.rs  jwt.rs  middleware.rs
services/fog/: go.mod  main.go
services/glimmer/: Dockerfile  README.md  gleam.toml  manifest.toml
services/ink/: Cargo.toml  Dockerfile  README.md
services/ink/.cargo/: config.toml
services/ink/migrations/: 20241015121320_create_users_table.sql  20241015121612_create_enums.sql  20241015121738_create_notes_table.sql  20241015121859_create_accounts_table.sql  20241015121954_create_user_preferences_table.sql  20241015122020_create_password_reset_tokens_table.sql
services/ink/shared/types/: Definition.ts  Enums.ts  Note.ts  PasswordResetToken.ts  UserPreferences.ts
services/ink/src/: app_state.rs  errors.rs  lib.rs  main.rs  mod.rs
services/ink/src/api/: dictionary.rs  mod.rs  notes.rs  users.rs
services/ink/src/api/notes/: http.rs  model.rs
services/ink/src/api/users/: http.rs  mod.rs  model.rs
services/ink/src/controllers/: mod.rs  note_controller.rs  user_controller.rs
services/ink/src/models/: definition.rs  enums.rs  mod.rs  notes.rs  password_reset_tokens.rs  users.rs  users_preferences.rs
services/ink/src/repositories/: note_repository.rs  user_repository.rs
services/ink/src/routes/: mod.rs  note_routes.rs  user_routes.rs
services/ink/src/utils/: cache.rs  constants.rs  hello_world_note.rs  image.rs  jwt.rs  mailer.rs  middleware.rs  mod.rs  r2.rs  sanitization.rs
services/note-waver/: Dockerfile  README.md  main.py  requirements.txt  utils.py
shared/types/: Definition.ts  Enums.ts  Note.ts  PartialNote.ts  PasswordResetToken.ts  SearchResult.ts  UserPreferences.ts
src/: actions.ts  auth.config.ts  auth.ts  db.ts  env.ts  firebase.ts  global.d.ts  i18n.ts  middleware.ts  routes.ts
src/actions/: dictionary.ts  image.ts  login.ts  new-password.ts  note.ts  register.ts  reset-password.ts  user.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
src/components/: AddNoteButton.tsx  AddNoteDialog.tsx  AddNoteSubmit.tsx  AnimatedCounter.tsx  ColourSelect.tsx  Counter.tsx  DeleteNoteDialog.tsx  DeleteNoteSubmit.tsx  Dictionary.tsx  Dropdown.tsx  DropdownButton.tsx  EditNoteDialog.tsx  EditProfile.tsx  EditProfileDialog.tsx  EditorMenuBar.tsx  FavouriteSidebar.tsx  HomePage.tsx  HoverableSelectItem.tsx  KeyboardDialog.tsx  Loading.tsx  LoadingSuspense.tsx  LoginForm.tsx  Logo.tsx  MenuItems.tsx  More.tsx  MoreItem.tsx  NoFavourite.tsx  NotVisibleWarning.tsx  Note.tsx  NoteContextMenu.tsx  NoteEditor.tsx  NoteHeader.tsx  NoteTooltip.tsx  Notes.tsx  Placeholder.tsx  Profile.tsx  QueryProvider.tsx  Resizable.tsx  (+15 more)
(+198 files in other folders)
