[package]
name = "noteworthy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-macros = "0.4.1"
dotenv = "0.15.0"
rand = "0.8.5"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.209"
sqlx-postgres = "0.8.2"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-macros = "0.4.1"
