[package]
name = "noteworthy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.209"
sqlx-postgres = "0.8.2"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts-rs = { version = "9.0.1", features = ["chrono", "uuid"] }

[dev-dependencies]
axum-macros = "0.4.1"
