[package]
name = "noteworthy-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
cuid2 = "0.1.3"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.209"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ts-rs = { version = "9.0.1", features = ["chrono", "uuid"] }
validator = { version = "0.18.1", features = ["derive"] }
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }

[dev-dependencies]
axum-macros = "0.4.1"
