[package]
name = "ink"
description = "blazingly fast Noteworthy's API"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
cuid2 = "0.1.3"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = "1.0.209"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
ts-rs = { version = "10.0.0", features = ["chrono", "uuid"] }
validator = { version = "0.18.1", features = ["derive"] }
aws-config = "1.5.6"
aws-sdk-s3 = "1.49.0"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
shuttle-runtime = { version = "0.47.0", default-features = false }
shuttle-axum = "0.47.0"
image = "0.25.2"
resend-rs = "0.9.1"
serde_json = "1.0.128"
deadpool-redis = { version = "0.18.0", features = ["rt_tokio_1", "serde"] }
redis = { version = "0.27.3", default-features = false, features = ["tokio-native-tls-comp"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-macros = "0.4.1"
